--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Du MA I am Zarif<br /></h1>
-						<p>I am super comp I like to make things that help the lives of myself and the people around me.</a></p>
+						<h1>Hi, I'm Zarif.<br /></h1>
+						<p>I like to make things that help the lives of myself and the people around me.</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
