--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Du MA</a></li>
+							<li class="active"><a href="index.html">Main Page</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
